cleanup, comments, some logging